# viam-dht22-module

./: .env  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_VERIFICATION.md  FILE_STRUCTURE.md  FIXES_APPLIED.md  GITHUB_ACTIONS_DEBUG.md  LICENSE  OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  RASPBERRY_PI_SETUP.md  README.md  VIAM_UPLOAD.md  config.example.json  meta.json  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: deploy.yml
src/: __init__.py  __main__.py  deploy.yml  dht.py  dht22.py  humidity_sensor.py  main.py
